src/styles/components/score-table.scss
/**
 * Component: Score table
 * ------------------------------------------------------------------------------
 * Question score table.
 *
 */
.score-table {
  $parent: &;
  border: 3px solid var(--colour-dark-grey);

  &:not(:last-child) {
    margin-bottom: var(--gutter-s);
  }

  &__heading {
    background-color: var(--colour-dark-grey);
    color: var(--colour-text-inverse);
    display: flex;
    font-weight: var(--weight-bold);
    line-height: 1;
    padding: var(--gutter-s);
  }

  &__question-total {
    margin-left: auto;
  }

  &__row,
  &__legend {
    border-bottom: 3px solid var(--colour-background);
    display: grid;
    grid-column: span 3;
    grid-template-columns: 1fr 1fr 200px;
  }

  &__legend {
    position: relative;

    &::after {
      background-color: var(--colour-grey);
      content: '';
      height: 100%;
      left: 0;
      position: absolute;
      top: 0;
      width: 100%;
      z-index: 1;
    }
  }

  &__row {
    &:last-child {
      border-bottom: 0;
    }

    &.is-correct {
      #{$parent}__points {
        background-color: var(--colour-green);
      }
    }

    &.is-wrong {
      #{$parent}__given-answer {
        text-decoration: line-through;
      }

      #{$parent}__points {
        background-color: var(--colour-red);
      }
    }
  }

  &__cell,
  &__key {
    font-size: var(--font-xs);
    padding: var(--gutter-xs) var(--gutter-s);
  }

  &__key {
    position: relative;
    z-index: 2;
  }

  &__points {
    background-color: var(--colour-grey);
    text-align: right;
  }

  &.is-correct {
    border-color: var(--colour-green);

    #{$parent}__heading {
      background-color: var(--colour-green);
    }

    #{$parent}__legend::after {
      background-color: var(--colour-green);
      opacity: 0.5;
    }
  }

  &.is-mixed {
    border-color: var(--colour-yellow);

    #{$parent}__heading {
      background-color: var(--colour-yellow);
      color: var(--colour-text);
    }

    #{$parent}__legend::after {
      background-color: var(--colour-yellow);
      opacity: 0.5;
    }
  }

  &.is-wrong {
    border-color: var(--colour-red);

    #{$parent}__heading {
      background-color: var(--colour-red);
    }

    #{$parent}__legend::after {
      background-color: var(--colour-red);
      opacity: 0.5;
    }
  }
}

